Lighthouse fixes Made some changes proposed by Lighthouse. Still need to fix a FOUC which causes a huge layout shift on first load.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,3 +16,15 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.globalGrommetContainerStyle {
+  background: linear-gradient(180deg, rgba(125,76,219,1) 0%, rgba(128,203,196,1) 100%);
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+footer.globalFooterStyle {
+  background: transparent;
+  justify-content: center;
+}
